2.3/deploy2.3.2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf 
          subPath: nginx.conf 
        - name: nginx-config-volume
          mountPath: /usr/share/nginx/html/index.html 
          subPath: index.html
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-custom-config
