2.3/service2.3.1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: multi
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
